<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Matrix"
    android:background="@color/black"
    android:forceDarkAllowed="false">

    <ImageButton
        android:id="@+id/btnGoBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00"
        app:layout_constraintHorizontal_bias="0.00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="70dp"
        android:maxHeight="70dp"
        android:scaleType="fitCenter"
        android:src="@drawable/backicon"
        android:background="@color/Transparent"
        android:layout_margin="5dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/GoBack"
        android:onClick="onClickGoBack"/>
    <ImageButton
        android:id="@+id/btnDeleteAll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1.00"
        app:layout_constraintVertical_bias="0.00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="70dp"
        android:maxWidth="70dp"
        android:scaleType="fitCenter"
        android:src="@drawable/delete"
        android:background="@color/Transparent"
        android:layout_margin="5dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/Delete"
        android:onClick="onClickDeleteAll"
        />
    <TextView
        android:id="@+id/textViewWorkoutTool"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/MatrixCalculator"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textColor="@color/green"
        android:fontFamily="@font/infected"
        app:autoSizeTextType="uniform"
        />
    <TextView
        android:id="@+id/textViewMatrixSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewWorkoutTool"
        app:layout_constraintVertical_bias="0.05"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MatrixSize"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/textViewSizeM"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewMatrixSize"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/M"
        android:textColor="@color/white"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/editTextSizeM"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textViewSizeM"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewMatrixSize"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintHorizontal_bias="0.05"
        android:textColor="@color/white"
        android:inputType="number"
        android:textSize="15sp"
        android:hint="@string/Hint3"
        android:textColorHint="@color/dimGray"
        android:backgroundTint="@color/green"/>
    <TextView
        android:id="@+id/textViewSizeN"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewMatrixSize"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/N"
        android:textColor="@color/white"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/editTextSizeN"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textViewSizeN"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewMatrixSize"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintHorizontal_bias="0.15"
        android:textColor="@color/white"
        android:inputType="number"
        android:textSize="15sp"
        android:hint="@string/Hint3"
        android:textColorHint="@color/dimGray"
        android:backgroundTint="@color/green"/>
</androidx.constraintlayout.widget.ConstraintLayout>