<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fuel"
    android:forceDarkAllowed="false"
    android:background="@color/black">

    <ImageButton
        android:id="@+id/btnGoBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00"
        app:layout_constraintHorizontal_bias="0.00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="70dp"
        android:maxHeight="70dp"
        android:scaleType="fitCenter"
        android:src="@drawable/backicon"
        android:background="@color/Transparent"
        android:layout_margin="5dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/GoBack"
        android:onClick="onClickGoBack"/>
    <ImageButton
        android:id="@+id/btnDeleteAll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1.00"
        app:layout_constraintVertical_bias="0.00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="70dp"
        android:maxWidth="70dp"
        android:scaleType="fitCenter"
        android:src="@drawable/delete"
        android:background="@color/Transparent"
        android:layout_margin="5dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/Delete"
        />
    <TextView
        android:id="@+id/textViewFuelTool"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/FuelTool"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textColor="@color/green"
        android:fontFamily="@font/infected"
        app:autoSizeTextType="uniform"
        />
    <TextView
        android:id="@+id/txtFuelPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtFuelPrice"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFuelTool"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintHorizontal_bias="0.10"
        />
    <EditText
        android:id="@+id/edttxtFuelPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintValueDecimalZero"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/dimGray"
        android:backgroundTint="@color/green"
        app:layout_constraintTop_toBottomOf="@+id/textViewFuelTool"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.00"
        app:layout_constraintHorizontal_bias="0.85"
        tools:ignore="TouchTargetSizeCheck" />
    <TextView
        android:id="@+id/txtFuelConsumption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtFuelConsumption"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/txtFuelPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.10" />
    <Spinner
        android:id="@+id/spnFuelConsumption"
        android:layout_width="130dp"
        android:layout_height="36dp"
        android:padding="5dp"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/txtFuelPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.10"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    <EditText
        android:id="@+id/edttxtFuelConsumption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintValueDecimalZero"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/dimGray"
        android:backgroundTint="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintTop_toBottomOf="@+id/edttxtFuelPrice"
        tools:ignore="TouchTargetSizeCheck" />
    <TextView
        android:id="@+id/txtDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtDistance"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spnFuelConsumption"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.10"/>
    <EditText
        android:id="@+id/edttxtDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hintValueDecimalZero"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/dimGray"
        android:backgroundTint="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintTop_toBottomOf="@+id/edttxtFuelConsumption"
        tools:ignore="TouchTargetSizeCheck" />
    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPrice"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDistance"
        app:layout_constraintVertical_bias="0.20" />
    <TextView
        android:id="@+id/txtPriceValue"
        android:layout_width="124dp"
        android:layout_height="37dp"
        android:clickable="false"
        android:hint="@string/hintValueDecimalZero"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrice" />
    <TextView
        android:id="@+id/txtCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCurrency"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtPriceValue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrice"
        app:layout_constraintVertical_bias="0.07"
        app:layout_constraintHorizontal_bias="0.05"/>
    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="btnOnClkCalculate"
        android:text="@string/btnCalculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPriceValue"
        app:layout_constraintVertical_bias="0.307" />

</androidx.constraintlayout.widget.ConstraintLayout>