<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu"
    android:background="@color/black"
    android:forceDarkAllowed="false">

    <!--settings image button-->
    <ImageButton
        android:id="@+id/btnSettings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.00"
        app:layout_constraintHorizontal_bias="0.00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="70dp"
        android:maxHeight="70dp"
        android:scaleType="fitCenter"
        android:src="@drawable/settings"
        android:background="@color/Transparent"
        android:layout_margin="5dp"
        android:adjustViewBounds="true"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/Settings" />

    <!--Le Lu text-->
    <TextView
        android:id="@+id/textViewLeLu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/LogoTextPart1"
        android:textAlignment="center"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:fontFamily="@font/infected"
        app:autoSizeTextType="uniform"
        />

    <!--logout image button-->
    <ImageButton
        android:id="@+id/btnLogout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1.00"
        app:layout_constraintVertical_bias="0.00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxHeight="70dp"
        android:maxWidth="70dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logout"
        android:background="@color/Transparent"
        android:layout_margin="5dp"
        android:adjustViewBounds="true"
        android:onClick="onClickLogout"
        tools:ignore="SpeakableTextPresentCheck"
        android:contentDescription="@string/Exit"
        />

    <!--Tools text-->
    <TextView
        android:id="@+id/textViewTools"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewLeLu"
        app:layout_constraintVertical_bias="0.00"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/LogoTextPart2"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:textAlignment="center"
        android:fontFamily="@font/infected"
        app:autoSizeTextType="uniform"
        />

    <!--Menu-->
    <ScrollView
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTools"
        app:layout_constraintVertical_bias="0.00"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/Transparent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">
            <LinearLayout
                android:id="@+id/LinearLayout"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@color/dimDimGray"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnFuel"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_lime"
                    android:scaleType="fitCenter"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:src="@drawable/fuelicon"
                    android:onClick="onClickFuel"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:contentDescription="@string/FuelTool"
                    />
                <ImageButton
                    android:id="@+id/btnWorkout"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:src="@drawable/workouticon"
                    android:background="@drawable/round_button_blue"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:scaleType="fitCenter"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:onClick="onClickWorkout"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:contentDescription="@string/WorkoutTool" />
                <ImageButton
                    android:id="@+id/btnMatrix"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:src="@drawable/matrixicon"
                    android:background="@drawable/round_button_blue"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:scaleType="fitCenter"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:onClick="onClickMatrix"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:contentDescription="@string/MatrixCalculator"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/LinearLayout2"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:background="@color/dimDimGray">

                <ImageButton
                    android:id="@+id/btnRandom1"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_lime"
                    android:contentDescription="@string/ComingSoon"
                    android:scaleType="fitCenter"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:src="@drawable/randomiconwhite"
                    tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/LinearLayout3"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:background="@color/dimDimGray">

                <ImageButton
                    android:id="@+id/btnRandom2"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_lime"
                    android:contentDescription="@string/ComingSoon"
                    android:scaleType="fitCenter"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:src="@drawable/randomiconwhite"
                    tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/LinearLayout4"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:background="@color/dimDimGray">
                <ImageButton
                    android:id="@+id/btnRandom3"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_lime"
                    android:scaleType="fitCenter"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:src="@drawable/randomiconwhite"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:contentDescription="@string/ComingSoon"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/LinearLayout5"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_margin="5dp"
                android:background="@color/dimDimGray">

                <ImageButton
                    android:id="@+id/btnRandom4"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_button_lime"
                    android:scaleType="fitCenter"
                    android:scaleX="0.7"
                    android:scaleY="0.7"
                    android:src="@drawable/randomiconwhite"
                    tools:ignore="SpeakableTextPresentCheck"
                    android:contentDescription="@string/ComingSoon"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>